Revert "Fix align overflow"
This reverts commit 9b55ae4f691c1eaca29e1a744b2ede12aa037315.

--- a/styles/main.css
+++ b/styles/main.css
@@ -41,11 +41,8 @@ header {
     padding: 35px 40px;
     /* Grid properties */
     display: flex;
+    align-items: center;
     justify-content: space-between;
-}
-
-header .logo a {
-    text-decoration: none;
 }
 
 header img, header .links {
@@ -73,7 +70,6 @@ header .links a {
     /* Size properties */
     box-sizing: border-box;
     margin: 0 10px;
-    height: 38px;
 }
 
 /**
